[project]
name = "simple-redfish-exporter"
version = "0.1.0"
description = "Barebones, basic-auth exporter for Redfish power metrics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests~=2.32",
  "Flask~=3.1",
  "pydantic>=2.10.3",
  "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
    "uv>=0.5.6",
]

